TG-560 make sure the find/autocomplete are visible on scroll

--- a/Src/StaticSite/assets/styles/modules/components/_autocomplete.scss
+++ b/Src/StaticSite/assets/styles/modules/components/_autocomplete.scss
@@ -3,6 +3,8 @@
 
     &--container {
         @include container;
+        position: relative;
+        z-index: 1;
     }
     &--content {
         @include span(12);
